--- a/Web Client/src/index.css
+++ b/Web Client/src/index.css
@@ -64,12 +64,23 @@ ul.header li a {
 .custBredde{
   width: 60px !important;
 }
+.overskriftSize{
+  margin-top: 1%;
+  margin-left: 30%;
+  width: 40%;
+  height: 32%;
+}
+.overskriftSize1{
+  margin-top: 1%;
+  margin-left: 30%;
+  width: 40%;
+  height: 13%;
+}
 .nonTransparent{
     background-color: rgb(53, 53, 53);
     opacity: 0.95;
 }
 .nonTransparent2{
-  
   opacity: 0.95;
 }
 .nonTransparent1{
@@ -80,6 +91,10 @@ ul.header li a {
   margin-right: 2%;
   margin-top: 2%;
   margin-bottom: 2%;
+}
+.lidtPladsBund{
+  margin-left: 3%;
+  margin-right: 3%;
 }
 .minNyeMargin{
   margin-left: 8%;
