--- a/Web Client/src/index.css
+++ b/Web Client/src/index.css
@@ -86,6 +86,13 @@ ul.header li a {
 .nonTransparent1{
   opacity: 0.8;
 }
+.darkBackground{
+  margin-left: 5%;
+  width: 90%;
+  height: 80%;
+  background-color:black;
+  opacity: 0.9;
+}
 .lidtPlads{
   margin-left: 2%;
   margin-right: 2%;
