--- a/Web Client/src/index.css
+++ b/Web Client/src/index.css
@@ -87,11 +87,10 @@ ul.header li a {
   opacity: 0.8;
 }
 .darkBackground{
-  margin-left: 5%;
-  width: 90%;
+  margin-left: 0;
+  width: 100%;
   height: 80%;
-  background-color:black;
-  opacity: 0.9;
+  font-size: x-large;
 }
 .lidtPlads{
   margin-left: 2%;
